Changed the text in the application to RU, some edits, modified the socket

--- a/libraryapp/views/errors/404.ejs
+++ b/libraryapp/views/errors/404.ejs
@@ -1,4 +1,4 @@
-<%- include('../port/layout-start', {title: title}) %>
+<%- include('../port/start', {title: title}) %>
 <%- include('../port/menu') %>
 
 <div class="jumbotron jumbotron-fluid">
@@ -7,4 +7,4 @@
     </div>
 </div>
 
-<%- include('../port/layout-end') %>
+<%- include('../port/end') %>
