--- a/libraryapp/views/user/login.ejs
+++ b/libraryapp/views/user/login.ejs
@@ -1,4 +1,4 @@
-<%- include('../port/layout-start', {title: title}) %>
+<%- include('../port/start', {title: title}) %>
 <%- include('../port/menu') %>
 
 <h1><%= title %></h1>
@@ -19,11 +19,11 @@
                 <input type="submit" class="btn btn-primary btn-block mb-4" value="Войти" />
             </div>
             <div class="text-center">
-                <p><a href="/user/register">Register</a></p>
+                <p><a href="/user/register">Регистрация</a></p>
             </div>
         </form>
 
     </div>
 </div>
 
-<%- include('../port/layout-end') %>
+<%- include('../port/end') %>
