--- a/libraryapp/views/user/profile.ejs
+++ b/libraryapp/views/user/profile.ejs
@@ -1,4 +1,4 @@
-<%- include('../port/layout-start', {title: title}) %>
+<%- include('../port/start', {title: title}) %>
 <%- include('../port/menu') %>
 
 <h1><%= title %></h1>
@@ -17,4 +17,4 @@
     </div>
 </div>
 
-<%- include('../port/layout-end') %>
+<%- include('../port/end') %>
