--- a/libraryapp/views/books/index.ejs
+++ b/libraryapp/views/books/index.ejs
@@ -1,8 +1,8 @@
-<%- include('../port/layout-start', {title: title}) %>
+<%- include('../port/start', {title: title}) %>
 <%- include('../port/menu') %>
 
 <h1><%= title %></h1>
-<a class="btn btn-sm btn-primary" href="books/create">Добавить запись</a>
+<a class="btn btn-sm btn-primary" href="books/create">Добавить книгу</a>
 
     <% if(books.length) { %>
 
@@ -10,7 +10,7 @@
             <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Заголовок</th>
+                <th scope="col">Название</th>
                 <th scope="col"></th>
             </tr>
             </thead>
@@ -40,7 +40,7 @@
         </table>
 
     <% } else { %>   
-        <h3 class="mt-5">Записей пока нет</h3>
+        <h3 class="mt-5">There are no posts yet</h3>
     <% } %>    
 
-<%- include('../port/layout-end') %>
+<%- include('../port/end') %>
