--- a/libraryapp/views/books/view.ejs
+++ b/libraryapp/views/books/view.ejs
@@ -1,4 +1,4 @@
-<%- include('../port/layout-start', {title: title}) %>
+<%- include('../port/start', {title: title}) %>
 <%- include('../port/menu') %>
 
 <h1><%= title %></h1>
@@ -7,17 +7,19 @@
     <div class="col-sm-8">
         <div class="card">
             <div class="card-body">
-
-                <h5 class="card-title"><%= books.title %></h5>
-                <p class="card-count">Просмотр: <%= count %></p>
-                <p class="card-text">Описание: <%= books.description %></p>
-                <p class="card-text">Автор: <%= books.authors %></p>
+                <h5 class="card-title"><%= book.title %></h5>
+                <p class="card-text">Просмотров книги: <%= count %></p>
+                <p class="card-text">Описание: <%= book.description %></p>
+                <p class="card-text">Автор(ы): <%= book.authors %></p>
+                <p class="card-text">Обложка: <%= book.fileCover %></p>
+                <p class="card-text">Имя файла: <%= book.fileName %></p>
+                <p class="card-text">Файл книги: <%= book.fileBook %></p>
 
                 <div class="text-right">
-                    <a class="btn btn-sm btn-primary" href="/books/update/<%= books.id %>">
+                    <a class="btn btn-sm btn-primary" href="/books/update/<%= book.id %>">
                         <i class="fa fa-pencil" aria-hidden="true"></i>
                     </a>
-                    <form action="/books/delete/<%= books.id %>" method="POST" class="d-inline">
+                    <form action="/books/delete/<%= book.id %>" method="POST" class="d-inline">
                         <button class="btn btn-sm btn-danger">
                             <i class="fa fa-trash" aria-hidden="true"></i>
                         </button>
@@ -27,45 +29,44 @@
             </div>
         </div>
     </div>
-</div>
 
-div class="col-sm-8">
-<% if(user) { %>
-    <div class="col-4">
-        <div class="form-group">
-            <label for="text">feedback</label>
-            <textarea
-                    placeholder="message"
-                    class="form-control"
-                    id="text"
-            ></textarea>
-        </div>
-        <button type="submit" id="send-msg" class="btn btn-primary">Send</button>
+    <div class="col-sm-8">
+        <% if(user) { %>
+            <div class="col-4">
+                <div class="form-group">
+                    <label for="text">Оставить отзыв</label>
+                    <textarea
+                            placeholder="message"
+                            class="form-control"
+                            id="text"
+                    ></textarea>
+                </div>
+                <button type="submit" id="send-msg" class="btn btn-primary">Отправить</button>
+            </div>
+        <% } else { %>
+            <div >
+                <p>Чтобы оставить отзыв, пожалуйста, <a href="/user/login">авторизуйтесь</a>.</p>
+            </div>
+        <% }  %>
     </div>
-<% } else { %>
-    <div >
-        <p>To leave a review, please, <a href="/user/login">log in</a>.</p>
-    </div>
-<% }  %>
-</div>
-<div class="col-sm-8">
-    <div class="col-4">
-        <div id="list" class="list-group">
-            <% if(messages ) { %>
-                <% messages.forEach(message => { %>
-                    <div class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <small class="text-muted"><%= message.username %> - <%= message.createdAt.getDate() %>.<%= message.createdAt.getMonth() + 1 %>.<%= message.createdAt.getFullYear() %> <%= message.createdAt.getHours() %>:<%= message.createdAt.getMinutes() %></small>
+    <div class="col-sm-8">
+        <div class="col-4">
+            <div id="list" class="list-group">
+                <% if(messages ) { %>
+                    <% messages.forEach(message => { %>
+                        <div class="list-group-item list-group-item-action">
+                            <div class="d-flex w-100 justify-content-between">
+                                <small class="text-muted"><%= message.username %> - <%= message.createdAt.getDate() %>.<%= message.createdAt.getMonth() + 1 %>.<%= message.createdAt.getFullYear() %> <%= message.createdAt.getHours() %>:<%= message.createdAt.getMinutes() %></small>
+                            </div>
+                            <p class="mb-1"><%= message.message %></p>
                         </div>
-                        <p class="mb-1"><%= message.message %></p>
-                    </div>
-                <% }); %>
-            <% } %>
-        </div>
+                    <% }); %>
+                <% } %>
+            </div>
 
+        </div>
     </div>
 </div>
 </div>
-</div>
 
-<%- include('../port/layout-end') %>
+<%- include('../port/end', {book, user}) %>
