--- a/libraryapp/views/port/menu.ejs
+++ b/libraryapp/views/port/menu.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Library</a>
+    <a class="navbar-brand" href="/">Библиотека</a>
     <button class="navbar-toggler"
             type="button"
             data-toggle="collapse"
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/books">Library</a>
+                <a class="nav-link" href="/books">Библиотека</a>
             </li>
         </ul>
     </div>
